[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/ui/inputs/ScalingBasicInput.gd" id="1_script"]

[node name="ScalingBasicInput" type="VBoxContainer"]
script = ExtResource("1_script")

[node name="ModeLabel" type="Label" parent="."]
layout_mode = 2
text = "Choose scale factor:"
horizontal_alignment = 1

[node name="ScaleButtons" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="HalfButton" type="Button" parent="ScaleButtons"]
layout_mode = 2
text = "0.5x"
custom_minimum_size = Vector2(70, 40)

[node name="DoubleButton" type="Button" parent="ScaleButtons"]
layout_mode = 2
text = "2x"
custom_minimum_size = Vector2(70, 40)

[node name="TripleButton" type="Button" parent="ScaleButtons"]
layout_mode = 2
text = "3x"
custom_minimum_size = Vector2(70, 40)

[node name="NotationLabel" type="Label" parent="."]
layout_mode = 2
text = "S(2.0)"
horizontal_alignment = 1
modulate = Color(0.7, 0.7, 0.7, 1)
